# tmf_additive_synth

./: AGENTS.md  CMakeLists.txt  FFT.h  tmf_additive_synth.cpp  tmf_additive_synth.h  tmf_additive_synth.mm
.github/workflows/: ci.yml
AdditiveSynth/: AdditiveSynthHarmonicCollector.h  AdditiveSynthHarmonicCollectorManager.h  VoiceInterceptorAdditiveSynth.h  VoiceInterceptorAdditiveSynthManager.h
AdditiveSynth/CollectorExamples/: HarmonicCollectorEnFifther.h  HarmonicCollectorOctaveHarmonics.h  HarmonicCollectorOctaves.h  HarmonicCollectorSine.h  HarmonicCollectorUnevenBands.h
tests/: AdditiveSynthHarmonicCollectors.cpp  AdditiveSynthOutputRegressionTests.cpp
